--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<div id="Nav"> 
 			 <nav>
 			 		<ul> 
-			 			<li>About</li>
-			 			<li>Portfolio</li>
-			 			<li>Contact</li>
+			 			<a href=""><li>About</li></a>
+			 			<a href=""><li>Portfolio</li></a>
+			 			<a href=""><li>Contact</li></a>
 			 		</ul>	
 			 </nav>
 	</div>
@@ -39,7 +39,7 @@
 					<h2 class="header2">About Me</h2>
 						
 						<img id="mainpic"  src="10959701_10204942636783719_1122045242016424831_n.jpg" hieht="150px" width="150px"> 
-						<p>This is going to be my paragraph This is going to be my paragraph</p>
+						<p> Hi my name is Bradley Stahler, I'm an aspiring Front End Developer and love to learn new technologies. My passion for Web Development definatly comes from the ability to create applictations and bring ideas to life. </p>
 
 						
 				</div>
@@ -50,11 +50,11 @@
 
 				<div class="icons">
 					<ul>
-						<li><img src="square-linkedin-128.png" height="50px" width="50px"></li>
+						<a href="https://www.linkedin.com/"><li><img src="square-linkedin-128.png" height="50px" width="50px"></li></a>
 
-						<li> <img src="github_square_black-128.png" height="50px" width="50px"></li>
+						<a href="https://github.com/bstahler123"><li> <img src="github-square-social-media-128.png" height="50px" width="50px"></li></a>
 
-						<li> <img src="overflow-128.png" height="50px" width="50px"></li>
+						<a href="http://stackoverflow.com/"><li> <img src="overflow-128.png" height="50px" width="50px"></li></a>
 					</ul>
 				</div>
 
