--- a/contact.html
+++ b/contact.html
@@ -73,11 +73,11 @@
 
 				<div class="icons">
 					<ul>
-						<a href="https://www.linkedin.com/"><li><img src="square-linkedin-128.png" height="50px" width="50px"></li></a>
+						<a href="https://www.linkedin.com/"><li><img src="Images/square-linkedin-128.png" height="50px" width="50px"></li></a>
 
-						<a href="https://github.com/bstahler123"><li> <img src="github-square-social-media-128.png" height="50px" width="50px"></li></a>
+						<a href="https://github.com/bstahler123"><li> <img src="Images/github-square-social-media-128.png" height="50px" width="50px"></li></a>
 
-						<a href="http://stackoverflow.com/"><li> <img src="overflow-128.png" height="50px" width="50px"></li></a>
+						<a href="http://stackoverflow.com/"><li> <img src="Images/overflow-128.png" height="50px" width="50px"></li></a>
 					</ul>
 				</div>
 
