--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="About">
 					<h2 class="header2">About Me</h2>
 						
-						<img id="mainpic"  src="IMG_0067-Edit.jpg" hieht="200px" width="200px"> 
+						<img id="mainpic"  src="Images/IMG_0067-Edit.jpg" hieht="200px" width="200px"> 
 						<p> Hi my name is Bradley Stahler, I'm an aspiring Front End Developer and love to learn new technologies. My passion for Web Development definitely comes from the ability to create applications and bring ideas to life. </p>
 
 						
@@ -50,11 +50,11 @@
 
 				<div class="icons">
 					<ul>
-						<a href="https://www.linkedin.com/"><li><img src="square-linkedin-128.png" height="50px" width="50px"></li></a>
+						<a href="https://www.linkedin.com/"><li><img src="Images/square-linkedin-128.png" height="50px" width="50px"></li></a>
 
-						<a href="https://github.com/bstahler123"><li> <img src="github-square-social-media-128.png" height="50px" width="50px"></li></a>
+						<a href="https://github.com/bstahler123"><li> <img src="Images/github-square-social-media-128.png" height="50px" width="50px"></li></a>
 
-						<a href="http://stackoverflow.com/"><li> <img src="overflow-128.png" height="50px" width="50px"></li></a>
+						<a href="http://stackoverflow.com/"><li> <img src="Images/overflow-128.png" height="50px" width="50px"></li></a>
 					</ul>
 				</div>
 
